REL-108300 Error message does not disappear when changing destination location

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/Edit.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/Edit.cshtml
@@ -11,6 +11,8 @@
 	<h1>Create Integration Point</h1>
 }
 
+<div id="processingLocationErrorContainer"></div>
+
 <div class="card ">
 	<div class="table full-width">
 		<div class="cell" id="stepProgress"></div>
