--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -8,7 +8,7 @@
 <link href="~/Content/buttermilk-overrides.css" rel="stylesheet" />
 
 <div id="_main">
-    <div id="import-provider-configuration">
+    <div id="import-provider-configuration" style="min-width: 900px;">
         <div class="card">
             <span class="label">Import Detail</span>
             <table style="width: 100%;">
@@ -22,10 +22,6 @@
                                 <select class="fluid-mock-select" id="import-importType" data-bind="options:importTypes, optionsText:'name', optionsValue:'value', value:selectedImportType, optionsCaption: 'Select...' ,select2: { width: '100%' }"></select>
                             </div>
                         </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 48%;">
                         <div class="field-row">
                             <div class="field-label required">
                                 Processing Source:
@@ -48,10 +44,6 @@
                                 </div>
                             </div>
                         </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td style="width: 48%;">
                         <div class="field-row">
                             <div class="field-label required">
                                 Start Line:
@@ -64,7 +56,8 @@
                 </tr>
             </table>
         </div>
-        <div class="card" id="card-margin-bottom" data-bind="visible: selectedImportType() == 'production'">
+
+        <div class="card" id="card-style" data-bind="visible: selectedImportType() == 'production'">
             <span class="label">Production</span>
             <table style="width: 100%;">
                 <tbody>
@@ -79,7 +72,7 @@
                     </tr>
             </table>
         </div>
-        <div class="card" id="card-margin-bottom" data-bind="visible: selectedImportType() == 'document'">
+        <div class="card" id="card-style" data-bind="visible: selectedImportType() == 'document'">
             <span class="label">File Encoding</span>
             <table style="width: 100%;">
                 <tbody>
@@ -142,7 +135,6 @@
                                     <span>First Line Contains Column Names:</span>
                                 </div>
                                 <div class="field-value">
-                                    @**Todo: add css space here to line up with the label*@
                                     <input type="radio" name="firstLineHasColNames" value="true" data-bind="checked: fileContainsColumn" /> Yes<br />
                                     <input type="radio" name="firstLineHasColNames" value="false" data-bind="checked: fileContainsColumn" /> No
                                 </div>
@@ -150,7 +142,7 @@
                         </td>
                         <td style="vertical-align: text-top;">
                             <div class="field-row">
-                                <div class="field-label" style="margin-left: 30px;">
+                                <div class="field-label">
                                     File Column Headers:
                                 </div>
                             </div>
@@ -164,7 +156,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="card" id="card-margin-bottom" data-bind="visible: selectedImportType() == 'image'">
+        <div class="card" id="card-style" data-bind="visible: selectedImportType() == 'image'">
             <span class="label">Image</span>
             <table style="width: 100%;">
                 <tr>
@@ -175,6 +167,7 @@
                             </div>
                         </div>
                     </td>
+                </tr>
             </table>
         </div>
     </div>
