--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -148,7 +148,13 @@
                             </div>
                             <div class="field-row">
                                 <div class="field-value middle-vertical-align">
-                                    <textarea readonly id="file-column-headers"></textarea>
+                                    <div id="file-column-container">
+                                        <div id="file-column">
+                                            <div id="file-column-textarea">
+                                                <textarea readonly id="file-column-headers"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </td>
