REL-108419: loading the data for the file column header
(cherry picked from commit 7797a4d31da3032f554ae08f3e7e3c7404632081)

--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportSettings.cshtml
@@ -151,7 +151,7 @@
                                     <div id="file-column-container">
                                         <div id="file-column">
                                             <div id="file-column-textarea">
-                                                <textarea readonly id="file-column-headers"></textarea>
+                                                <textarea readonly id="file-column-headers" data-bind="textInput: populateFileColumnHeaders"></textarea>
                                             </div>
                                         </div>
                                     </div>
