REL-101902 The Choice object used throughout the code is deprecated
Replace all occurrences of Relativity.Client.Choice with Relativity.Client.DTOs.Choice

--- a/Source/kCura.IntegrationPoints.Data/GeneratedStringConstants.tt
+++ b/Source/kCura.IntegrationPoints.Data/GeneratedStringConstants.tt
@@ -17,7 +17,7 @@ var tabTypes = SchemaHelper.GetObjectTypes(fullPathSchemaFile);
 string nameSpaceName = "kCura.IntegrationPoints.Data"; 
 #>
 using System;
-using kCura.Relativity.Client;
+using kCura.Relativity.Client.DTOs;
 namespace <#=nameSpaceName#>
 {
  
