--- a/Source/kCura.IntegrationPoints.Data/GeneratedDTOs.tt
+++ b/Source/kCura.IntegrationPoints.Data/GeneratedDTOs.tt
@@ -11,7 +11,7 @@
 using System;
 using System.Collections.Generic;  
 using System.Text;
-using kCura.Relativity.Client;
+using kCura.Relativity.Client.DTOs;
 using kCura.IntegrationPoints.Data.Attributes;
 
 namespace kCura.IntegrationPoints.Data
