--- a/source/kCura.IntegrationPoints.Web/Content/import.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import.css
@@ -58,7 +58,7 @@
     min-width: 210px;
     outline: none;
     resize: none;
-    border: 1px solid #000;
+    border: 1px solid #c1c1c1;
     overflow-y: scroll;
 }
 
@@ -67,4 +67,14 @@
     display: table;
     width: 100%;
     padding: 5px;
+}
+
+.import-load {
+    background: url(./Images/64x64.gif) no-repeat center;
+    position: fixed;
+    height: 80px;
+    width: 80px;
+    top: 50%;
+    left: 50%;
+    margin: 0 auto;
 }
