--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -139,10 +139,10 @@
                 </span>
                 <span class="pag-text"> per page</span>
                 <span class="pag-nav-button-holder">
-                    <span class="pag-nav-button pag-nav-first-dis" id="pag-nav-move-first"></span>
-                    <span class="pag-nav-button pag-nav-previous-dis" id="pag-nav-move-previous"></span>
-                    <span class="pag-nav-button pag-nav-next-dis" id="pag-nav-move-next"></span>
-                    <span class="pag-nav-button pag-nav-last-dis" id="pag-nav-move-last"></span>
+                    <span id="pag-nav-move-first"></span>
+                    <span id="pag-nav-move-previous"></span>
+                    <span id="pag-nav-move-next"></span>
+                    <span id="pag-nav-move-last"></span>
                 </span>
             </span>
             <div class="transfers-table">
