REL 110804: UI fix for show and hide for table

--- a/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/ImportProvider/ImportPreview.cshtml
@@ -118,7 +118,7 @@
         </table>
     </div>
 
-    <div class="row">
+    <div class="row" style="display: none">
         <div class="card" id="tableData">
             <p class="card-header preview-card-header">Records</p>
             <span class="pagination-controls">
