--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -122,7 +122,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="field-row" data-bind="visible: isDocument() == 'true' && SelectedOverwrite() == 'Append Only'">
+            <div class="field-row" data-bind="visible: ! isLDAPProvider() && isDocument() == 'true' && SelectedOverwrite() == 'Append Only'">
                 <div class="field-label required ">Use Folder Path Information:</div>
                 <div class="field-value">
                     <ul>
