REL-105052 adding new controller for field catalog

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -5,7 +5,7 @@
         <span style="visibility: hidden;" id="forceRedraw"></span>
         <div class="map-field-title">
             <label class="list-title leftSide-field">Destination</label>
-             <button class="button generic positive map-field-btn" id="mapFieldsBtn" data-bind="click: AutoFieldMap">Map Fields</button>
+             <button class="button generic positive map-field-btn" id="mapFieldsBtn" data-bind="click: autoFieldMap">Map Fields</button>
             <label class="list-title rightSide-field">Source</label>
         </div>
 			<div data-bind="validationMessage: sourceMapped" class="icon-error legal-hold field-validation-error"></div>
