--- a/source/kCura.IntegrationPoints.Web/Content/import.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import.css
@@ -19,6 +19,7 @@
     display: block;
     width: 112.378px;
     margin: 8px 0px 0px -10px;
+    list-style-type: none;
 }
 
 #importCustomButton:hover #importCustomButtonUl {
@@ -77,4 +78,15 @@
     top: 50%;
     left: 50%;
     margin: 0 auto;
+}
+
+#jstree-holder-div {
+    height: 50% !important;
+    position: absolute !important;
+}
+
+.import-body-style {
+    position: absolute;
+    height: 100% !important;
+    width: 100%;
 }
