REL-107930 fix summary target folder

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
@@ -46,7 +46,7 @@
 							</div>
 							<div class="field-value select2-double-width">
 								<div id="location-select" class="select2-container fluid-mock-select filter-container">
-									<input id="location-input" type="text" readonly='readonly' placeholder="Select..." data-bind="value: FolderArtifactName" />
+									<input id="location-input" type="text" readonly='readonly' placeholder="Select..." data-bind="value: TargetFolder" />
 									<span id="location-span" class="icon legal-hold icon-chevron-down" role="presentation"></span>
 								</div>
 								<div id="jstree-holder-div" class="jstree-holder browse" hidden="hidden">
