REL-111826: Bug fix for Mapping Fields step. Bug: The UI was not displaying the Folder Path Info drop down value on an Edit of IP

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -138,7 +138,7 @@
             <div class="field-row" data-bind="visible: UseFolderPathInformation() == 'true'">
                 <div class="field-label required ">Folder Path Information:</div>
                 <div class="field-value ">
-                    <select id="folderPath" data-bind="options: folderPathOptions,  value: FolderPathSourceField,  optionsText: 'displayName',  optionsValue: 'displayName', optionsCaption: 'Select...' ,select2: {}"></select>
+                    <select id="folderPath" data-bind="options: FolderPathImportProvider,  value: FolderPathSourceField,  optionsText: 'displayName',  optionsValue: 'fieldIdentifier', optionsCaption: 'Select...' ,select2: {}"></select>
                 </div>
             </div>
 		</div>
