REL-110291 Export from RDOs - adding new controller method to retrieve default rdo type id

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationDetailsPartial.cshtml
@@ -83,7 +83,7 @@
 	</div>
 	<div class="field-row">
 		<div class="field-label required">
-			Destination Object:
+			Transferred Object:
 		</div>
 		<div class="field-value">
 			<select id="destinationRdo" data-bind="options: rdoTypes, optionsText: 'displayName', optionsValue: 'value', value: artifactTypeID, optionsCaption: 'Select...', select2: {}, disable: isDestinationObjectDisabled()"></select>
