--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -22,7 +22,7 @@
 											</div>
 										</li>
 										<li>
-											<div class="field-value">
+											<div class="field-value"  data-bind="visible: !ExportRdoMode()">
 												<input id="export-images-checkbox" type="checkbox" data-bind="disable: HasBeenRun(), checked: ExportImages" />
 												<label>Images</label>
 											</div>
@@ -97,7 +97,7 @@
 										</h3>
 									</p>
 								</div>
-								<div class="field-row">
+								<div class="field-row" data-bind="visible: !ExportRdoMode()">
 									<div class="field-label required">
 										Image File Format:
 									</div>
@@ -206,7 +206,7 @@
 										</h3>
 									</p>
 								</div>
-								<div class="field-row">
+								<div class="field-row" data-bind="visible: !ExportRdoMode()">
 									<div class="field-label required">
 										Name Output Files After:
 									</div>
