--- a/Source/kCura.IntegrationPoints.Web/Views/Shared/_Layout.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
 	@Scripts.Render("~/bundles/messaging")
 	@Scripts.Render("~/bundles/frame-messaging")
 	<script src="~/Scripts/loading-modal.js"></script>
+	<script src="~/Scripts/moment.js"></script>
+	<script src="~/Scripts/moment-timezone-with-data.js"></script>
 	@RenderSection("scripts", required: false)
 	<script>
 		Q.longStackSupport = true;
